[package]
name = "libuci-sys"
version = "1.1.0"
authors = ["Benjamin Ludewig <ludewig.b@gmail.com>", "Hugo Hakim Damer <hdamer@uni-bremen.de>"]
description = "FFI bindings to OpenWRT UCI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/namib-project/libuci-sys"
keywords = ["openwrt"]
categories = ["external-ffi-bindings"]
build = "build.rs"
edition = "2018"
exclude = ["libubox/tests/*", "uci/tests/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
bindgen = "^0.58.1"
cmake = "^0.1.45"
