[package]
name = "rust-uci"
version = "0.1.6"
authors = ["Benjamin Ludewig <ludewig.b@gmail.com>", "Hugo Hakim Damer <hdamer@uni-bremen.de>"]
description = "OpenWRT UCI rust bindings"
repository = "https://github.com/namib-project/libuci-sys"
keywords = ["openwrt"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
libuci-sys = { version = "^1.1.0", path = "../libuci-sys" }
log = "^0.4.14"
libc = "^0.2.91"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
